Add dark and light them

--- a/src/components/cookie.astro
+++ b/src/components/cookie.astro
@@ -1,4 +1,4 @@
-<body>
+<body class="dark:bg-stone-900">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.x.x/dist/cookieconsent.css" />
 	<script defer src="https://cdn.jsdelivr.net/gh/orestbida/cookieconsent@v2.x.x/dist/cookieconsent.js"></script>
 	<script>
