--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -41,7 +41,7 @@ changeLanguage("en");
 			.mauticform-field-hidden { display:none }
 		</style>
 		
-		<div id="mauticform_wrapper_contactform" class="mauticform_wrapper">
+		<div id="mauticform_wrapper_contactform" class="mauticform_wrapper text-[#192734] dark:text-white dark:bg-stone-900">
 			<form autocomplete="false" role="form" method="post" action="http://asset.monolithon.com/form/submit?formId=1" id="mauticform_contactform" data-mautic-form="contactform" enctype="multipart/form-data">
 				<div class="mauticform-error" id="mauticform_contactform_error"></div>
 				<div class="mauticform-message" id="mauticform_contactform_message"></div>
