--- a/src/pages/hu/jogok.astro
+++ b/src/pages/hu/jogok.astro
@@ -8,166 +8,168 @@ changeLanguage("hu");
 
 <Layout lang="hu" title="jogok">
 	<Container class="max-w-3xl mx-auto px-4 py-8">
-		<div>
-			<h1 class="text-3xl font-bold mb-4">Adatvédelmi irányelvek a monolithon.com weboldalhoz</h1>
-
-			<p class="mb-6">A monolithon.com weboldal látogatóinak magánélete az egyik legfontosabb prioritásunk.</p>
-
-			<h2 class="text-2xl font-bold mb-4" class="text-2xl font-bold mb-4">Általános Adatvédelmi Rendelet (GDPR)</h2>
-			<p class="mb-6">Az Ön információinak adatkezelője a Gede Tibor.</p>
-
-			<p class="mb-6">
-				A Gede Tibor adatkezelésének jogalapja az ezen Adatvédelmi irányelvekben leírt személyes információk gyűjtésére és felhasználására a gyűjtött személyes információk és a gyűjtés kontextusa szerint változik:
-			</p>
-			<ul class="list-disc list-inside mb-6">
-				<li>A Gede Tibornak teljesítenie kell Önnel kötött szerződést</li>
-				<li>Ön hozzájárult a Gede Tiborhoz</li>
-				<li>A személyes információinak feldolgozása a Gede Tibor jogos érdekeihez kapcsolódik</li>
-				<li>A Gede Tibornak meg kell felelnie a törvénynek</li>
-			</ul>
-
-			<p class="mb-6">
-				A Gede Tibor csak annyi ideig tárolja személyes információit, amennyire az szükséges az ezen Adatvédelmi irányelvekben meghatározott célok teljesítéséhez. Az információkat megőrizzük és használjuk azáltal, hogy teljesítjük a törvényi kötelezettségeinket, megoldjuk vitáinkat és betartjuk irányelveinket.
-			</p>
-
-			<p class="mb-6">
-				Ha az Európai Gazdasági Térségen (EEA) belüli lakos, Önnek bizonyos adatvédelmi jogai vannak. Ha tudni szeretné, hogy milyen személyes információkat tárolunk Önről, és azt szeretné, hogy azokat eltávolítsuk rendszerünkből, kérjük, lépjen velünk kapcsolatba.
-			</p>
-			<p class="mb-6">Bizonyos körülmények között az alábbi adatvédelmi jogai vannak:</p>
-			<ul class="list-disc list-inside mb-6">
-				<li>Jog a hozzáféréshez, az információk frissítéséhez vagy törléséhez, amelyeket rólad gyűjtöttünk</li>
-				<li>Jog a helyesbítéshez</li>
-				<li>Jog az adatok kezelésének tiltásához</li>
-				<li>Jog az adatkezelés korlátozásához</li>
-				<li>Jog az adathordozhatósághoz</li>
-				<li>Jog az hozzájárulás visszavonásához</li>
-			</ul>
-
-			<h2 class="text-2xl font-bold mb-4" class="text-2xl font-bold mb-4">Log fájlok</h2>
-
+		<div class="text-[#192734] dark:text-white">
+			<div>
+				<h1 class="text-3xl font-bold mb-4">Adatvédelmi irányelvek a monolithon.com weboldalhoz</h1>
+	
+				<p class="mb-6">A monolithon.com weboldal látogatóinak magánélete az egyik legfontosabb prioritásunk.</p>
+	
+				<h2 class="text-2xl font-bold mb-4" class="text-2xl font-bold mb-4">Általános Adatvédelmi Rendelet (GDPR)</h2>
+				<p class="mb-6">Az Ön információinak adatkezelője a Gede Tibor.</p>
+	
+				<p class="mb-6">
+					A Gede Tibor adatkezelésének jogalapja az ezen Adatvédelmi irányelvekben leírt személyes információk gyűjtésére és felhasználására a gyűjtött személyes információk és a gyűjtés kontextusa szerint változik:
+				</p>
+				<ul class="list-disc list-inside mb-6">
+					<li>A Gede Tibornak teljesítenie kell Önnel kötött szerződést</li>
+					<li>Ön hozzájárult a Gede Tiborhoz</li>
+					<li>A személyes információinak feldolgozása a Gede Tibor jogos érdekeihez kapcsolódik</li>
+					<li>A Gede Tibornak meg kell felelnie a törvénynek</li>
+				</ul>
+	
+				<p class="mb-6">
+					A Gede Tibor csak annyi ideig tárolja személyes információit, amennyire az szükséges az ezen Adatvédelmi irányelvekben meghatározott célok teljesítéséhez. Az információkat megőrizzük és használjuk azáltal, hogy teljesítjük a törvényi kötelezettségeinket, megoldjuk vitáinkat és betartjuk irányelveinket.
+				</p>
+	
+				<p class="mb-6">
+					Ha az Európai Gazdasági Térségen (EEA) belüli lakos, Önnek bizonyos adatvédelmi jogai vannak. Ha tudni szeretné, hogy milyen személyes információkat tárolunk Önről, és azt szeretné, hogy azokat eltávolítsuk rendszerünkből, kérjük, lépjen velünk kapcsolatba.
+				</p>
+				<p class="mb-6">Bizonyos körülmények között az alábbi adatvédelmi jogai vannak:</p>
+				<ul class="list-disc list-inside mb-6">
+					<li>Jog a hozzáféréshez, az információk frissítéséhez vagy törléséhez, amelyeket rólad gyűjtöttünk</li>
+					<li>Jog a helyesbítéshez</li>
+					<li>Jog az adatok kezelésének tiltásához</li>
+					<li>Jog az adatkezelés korlátozásához</li>
+					<li>Jog az adathordozhatósághoz</li>
+					<li>Jog az hozzájárulás visszavonásához</li>
+				</ul>
+	
+				<h2 class="text-2xl font-bold mb-4" class="text-2xl font-bold mb-4">Log fájlok</h2>
+	
+				<p>
+					A monolithon.com a log fájlok használatával követi a szokásos eljárást. Ezek a fájlok naplózzák a látogatókat, amikor meglátogatják a weboldalakat. Az összes tárhelyszolgáltató ezt csinálja, és ezek a szolgáltatások analitikájának részét képezik. A log fájlok által gyűjtött információk magukban foglalják az internetprotokollum-címeket (IP-címeket), a böngésző típusát, az internet szolgáltatóját (ISP), a dátum- és időbélyeget, a hivatkozó/kilépő oldalakat és lehet, hogy a kattintások számát. Ezek a személyazonosításra alkalmas információkkal nem kapcsolódnak össze. Az információ célja a trendek elemzése, a webhely kezelése, a felhasználók webhelyen való mozgásának követése és a demográfiai információk gyűjtése.
+				</p>
+	
+				<h2 class="text-2xl font-bold mb-4">Cookie-k és Web Beacon-ok</h2>
+	
+				<p>
+					A monolithon.com, mint minden más weboldal, "cookie"-kat használ. Ezek a cookie-k az információkat tárolják, ideértve a látogatók preferenciáit és azon oldalakat, amelyeket a látogató megtekintett vagy meglátogatott a weboldalon. Az információkat arra használjuk, hogy az látogatók élményét optimalizáljuk, és testre szabjuk weboldalunk tartalmát a látogatók böngésző típusa és/vagy egyéb információi alapján.
+				</p>
+	
+				<h2 class="text-2xl font-bold mb-4">Hirdetési és Adatellátók és Tárhelyszolgáltatók</h2>
+	
+				<p>
+					A weboldalunkon található néhány hirdető cookie-kat és web beacon-öket használhat. A hirdető partnereinket alább felsoroltuk. Mindegyik hirdető partnerünknek megvan a saját Adatvédelmi Irányelve a felhasználói adatokra vonatkozó politikáikkal kapcsolatban. Az egyszerűbb hozzáférés érdekében az Adatvédelmi irányelveiket alább linkeltük.
+				</p>
+	
+				<ul class="list-disc list-inside my-6">
+					<li>Google</li>
+					<li>
+						Facebook/Meta
+						<p><a href="#"></a></p>
+					</li>
+					<li>
+						Linkedin
+						<p><a href="#"></a></p>
+					</li>
+					<li>
+						Microsoft
+						<p><a href="#"></a></p>
+					</li>
+					<li>
+						Twitter
+						<p><a href="#"></a></p>
+					</li>
+					<li>
+						Xolo GO OU
+						<p><a href="#"></a></p>
+					</li>
+					<li>
+						Paddle
+						<p><a href="#"></a></p>
+					</li>
+					<li>
+						Stape
+						<p><a href="#"></a></p>
+					</li>
+					<li>
+						Hetzner Online GmbH
+						<p><a href="#"></a></p>
+					</li>
+					<li>
+						Frappe Technologies Pvt. Ltd.
+						<p><a href="#"></a></p>
+					</li>
+					<li>
+						Odoo S. A.
+						<p><a href="#"></a></p>
+					</li>
+					<li>
+						Render
+						<p><a href="#"></a></p>
+					</li>
+					<li>Cloudflare</li>
+					<li>Railway.app</li>
+					<li>
+						fly.io
+						<p><a href="#"></a></p>
+					</li>
+					<li>
+						Discord
+						<p><a href="#"></a></p>
+					</li>
+				</ul>
+			</div>
+	
+			<h2 class="text-2xl font-bold mb-4">Adatvédelmi irányelvek</h2>
+	
+			<p>Ezen listán megtalálhatja a monolithon.com hirdető partnereinek Adatvédelmi irányelveit.</p>
+	
 			<p>
-				A monolithon.com a log fájlok használatával követi a szokásos eljárást. Ezek a fájlok naplózzák a látogatókat, amikor meglátogatják a weboldalakat. Az összes tárhelyszolgáltató ezt csinálja, és ezek a szolgáltatások analitikájának részét képezik. A log fájlok által gyűjtött információk magukban foglalják az internetprotokollum-címeket (IP-címeket), a böngésző típusát, az internet szolgáltatóját (ISP), a dátum- és időbélyeget, a hivatkozó/kilépő oldalakat és lehet, hogy a kattintások számát. Ezek a személyazonosításra alkalmas információkkal nem kapcsolódnak össze. Az információ célja a trendek elemzése, a webhely kezelése, a felhasználók webhelyen való mozgásának követése és a demográfiai információk gyűjtése.
+				A harmadik fél hirdetési szerverei vagy hirdetési hálózatai olyan technológiákat használnak, mint a cookie-k, JavaScript vagy Web Beacon-ok, amelyeket az ő megfelelő hirdetéseikhez és linkekhez használnak a monolithon.com weboldalon, és ezeket közvetlenül a felhasználó böngészőjének küldik. Ezek a technológiák azért vannak használva, hogy mérjék hirdetési kampányaik hatékonyságát és/vagy testre szabják a reklámtartalmat, amit látogatott weboldalakon lát.
 			</p>
-
-			<h2 class="text-2xl font-bold mb-4">Cookie-k és Web Beacon-ok</h2>
-
+	
+			<p>Figyelembe véve, hogy a monolithon.com nincs hozzáférése és kontrollja az ezeket használó cookie-k felett, amelyeket harmadik fél hirdetők használnak.</p>
+	
+			<h2 class="text-2xl font-bold mb-4">Harmadik fél adatvédelmi irányelvek</h2>
+	
 			<p>
-				A monolithon.com, mint minden más weboldal, "cookie"-kat használ. Ezek a cookie-k az információkat tárolják, ideértve a látogatók preferenciáit és azon oldalakat, amelyeket a látogató megtekintett vagy meglátogatott a weboldalon. Az információkat arra használjuk, hogy az látogatók élményét optimalizáljuk, és testre szabjuk weboldalunk tartalmát a látogatók böngésző típusa és/vagy egyéb információi alapján.
+				A monolithon.com Adatvédelmi irányelvei nem vonatkoznak más hirdetőkre vagy weboldalakra. Ezért javasoljuk, hogy az ezeket harmadik fél hirdetőihez kapcsolódó Adatvédelmi irányelveket részletesebb információkért tekintse meg. Ez magában foglalhatja gyakorlatukat és azon utasításokat, amelyek segítenek a bizonyos beállítások kikapcsolásában.
 			</p>
-
-			<h2 class="text-2xl font-bold mb-4">Hirdetési és Adatellátók és Tárhelyszolgáltatók</h2>
-
+	
 			<p>
-				A weboldalunkon található néhány hirdető cookie-kat és web beacon-öket használhat. A hirdető partnereinket alább felsoroltuk. Mindegyik hirdető partnerünknek megvan a saját Adatvédelmi Irányelve a felhasználói adatokra vonatkozó politikáikkal kapcsolatban. Az egyszerűbb hozzáférés érdekében az Adatvédelmi irányelveiket alább linkeltük.
+				Az egyéni böngésző beállításokon keresztül kikapcsolhatja a cookie-kat. A specifikus webböngészőkkel kapcsolatos cookie-kezelésről további részletes információt találhat a böngészők megfelelő weboldalain.
 			</p>
-
-			<ul class="list-disc list-inside my-6">
-				<li>Google</li>
-				<li>
-					Facebook/Meta
-					<p><a href="#"></a></p>
-				</li>
-				<li>
-					Linkedin
-					<p><a href="#"></a></p>
-				</li>
-				<li>
-					Microsoft
-					<p><a href="#"></a></p>
-				</li>
-				<li>
-					Twitter
-					<p><a href="#"></a></p>
-				</li>
-				<li>
-					Xolo GO OU
-					<p><a href="#"></a></p>
-				</li>
-				<li>
-					Paddle
-					<p><a href="#"></a></p>
-				</li>
-				<li>
-					Stape
-					<p><a href="#"></a></p>
-				</li>
-				<li>
-					Hetzner Online GmbH
-					<p><a href="#"></a></p>
-				</li>
-				<li>
-					Frappe Technologies Pvt. Ltd.
-					<p><a href="#"></a></p>
-				</li>
-				<li>
-					Odoo S. A.
-					<p><a href="#"></a></p>
-				</li>
-				<li>
-					Render
-					<p><a href="#"></a></p>
-				</li>
-				<li>Cloudflare</li>
-				<li>Railway.app</li>
-				<li>
-					fly.io
-					<p><a href="#"></a></p>
-				</li>
-				<li>
-					Discord
-					<p><a href="#"></a></p>
-				</li>
-			</ul>
+	
+			<h2 class="text-2xl font-bold mb-4">Gyermekek adatai</h2>
+	
+			<p>
+				Az internet használata közben a gyermekek védelmének egy másik prioritása számunkra. Arra ösztönözzük a szülőket és gondviselőket, hogy figyeljék, részt vegyenek és/vagy ellenőrizzék és irányítsák az online tevékenységet.
+			</p>
+	
+			<p>
+				A monolithon.com nem szándékosan gyűjt személyazonosítható információt a 13 év alatti gyermekekről. Ha úgy gondolja, hogy gyermeke ilyen információt adott meg a weboldalunkon, nagyon kérjük, lépjen kapcsolatba velünk azonnal, és minden tőlünk telhető erőfeszítést megteszünk az ilyen információk gyors eltávolítása érdekében a nyilvántartásainkból.
+			</p>
+	
+			<h2 class="text-2xl font-bold mb-4">Csak az online Adatvédelmi irányelv</h2>
+	
+			<p>
+				Adatvédelmi irányelveink kizárólag az online tevékenységeinkre vonatkoznak, és azokra az információkra érvényesek, amelyeket a monolithon.com weboldalán megosztanak vagy gyűjtenek. Ez az irányelv nem vonatkozik az offline vagy más csatornákon keresztül gyűjtött információkra.
+			</p>
+	
+			<h2 class="text-2xl font-bold mb-4">Hozzájárulás</h2>
+	
+			<p>A weboldalunk használatával Ön hozzájárul az Adatvédelmi irányelveinkhez, és elfogadja azok feltételeit.</p>
+	
+			<h2 class="text-2xl font-bold mb-4">Kapcsolat</h2>
+	
+			<p>Gede Tibor</p>
+			<p>Kelemen B. u. 2.</p>
+			<p>Székesfehérvár</p>
+			<p>8000</p>
+			<p>Magyarország</p>
+			<p>Adószám: 42985550-1-27</p>
+			<p><a href="https://www.monolithon.com/contactus">Vegye fel velünk a kapcsolatot</a></p>
 		</div>
-
-		<h2 class="text-2xl font-bold mb-4">Adatvédelmi irányelvek</h2>
-
-		<p>Ezen listán megtalálhatja a monolithon.com hirdető partnereinek Adatvédelmi irányelveit.</p>
-
-		<p>
-			A harmadik fél hirdetési szerverei vagy hirdetési hálózatai olyan technológiákat használnak, mint a cookie-k, JavaScript vagy Web Beacon-ok, amelyeket az ő megfelelő hirdetéseikhez és linkekhez használnak a monolithon.com weboldalon, és ezeket közvetlenül a felhasználó böngészőjének küldik. Ezek a technológiák azért vannak használva, hogy mérjék hirdetési kampányaik hatékonyságát és/vagy testre szabják a reklámtartalmat, amit látogatott weboldalakon lát.
-		</p>
-
-		<p>Figyelembe véve, hogy a monolithon.com nincs hozzáférése és kontrollja az ezeket használó cookie-k felett, amelyeket harmadik fél hirdetők használnak.</p>
-
-		<h2 class="text-2xl font-bold mb-4">Harmadik fél adatvédelmi irányelvek</h2>
-
-		<p>
-			A monolithon.com Adatvédelmi irányelvei nem vonatkoznak más hirdetőkre vagy weboldalakra. Ezért javasoljuk, hogy az ezeket harmadik fél hirdetőihez kapcsolódó Adatvédelmi irányelveket részletesebb információkért tekintse meg. Ez magában foglalhatja gyakorlatukat és azon utasításokat, amelyek segítenek a bizonyos beállítások kikapcsolásában.
-		</p>
-
-		<p>
-			Az egyéni böngésző beállításokon keresztül kikapcsolhatja a cookie-kat. A specifikus webböngészőkkel kapcsolatos cookie-kezelésről további részletes információt találhat a böngészők megfelelő weboldalain.
-		</p>
-
-		<h2 class="text-2xl font-bold mb-4">Gyermekek adatai</h2>
-
-		<p>
-			Az internet használata közben a gyermekek védelmének egy másik prioritása számunkra. Arra ösztönözzük a szülőket és gondviselőket, hogy figyeljék, részt vegyenek és/vagy ellenőrizzék és irányítsák az online tevékenységet.
-		</p>
-
-		<p>
-			A monolithon.com nem szándékosan gyűjt személyazonosítható információt a 13 év alatti gyermekekről. Ha úgy gondolja, hogy gyermeke ilyen információt adott meg a weboldalunkon, nagyon kérjük, lépjen kapcsolatba velünk azonnal, és minden tőlünk telhető erőfeszítést megteszünk az ilyen információk gyors eltávolítása érdekében a nyilvántartásainkból.
-		</p>
-
-		<h2 class="text-2xl font-bold mb-4">Csak az online Adatvédelmi irányelv</h2>
-
-		<p>
-			Adatvédelmi irányelveink kizárólag az online tevékenységeinkre vonatkoznak, és azokra az információkra érvényesek, amelyeket a monolithon.com weboldalán megosztanak vagy gyűjtenek. Ez az irányelv nem vonatkozik az offline vagy más csatornákon keresztül gyűjtött információkra.
-		</p>
-
-		<h2 class="text-2xl font-bold mb-4">Hozzájárulás</h2>
-
-		<p>A weboldalunk használatával Ön hozzájárul az Adatvédelmi irányelveinkhez, és elfogadja azok feltételeit.</p>
-
-		<h2 class="text-2xl font-bold mb-4">Kapcsolat</h2>
-
-		<p>Gede Tibor</p>
-		<p>Kelemen B. u. 2.</p>
-		<p>Székesfehérvár</p>
-		<p>8000</p>
-		<p>Magyarország</p>
-		<p>Adószám: 42985550-1-27</p>
-		<p><a href="https://www.monolithon.com/contactus">Vegye fel velünk a kapcsolatot</a></p>
 	</Container>
 </Layout>
