--- a/src/pages/hu/kapcsolat.astro
+++ b/src/pages/hu/kapcsolat.astro
@@ -131,7 +131,7 @@ changeLanguage("hu");
 			}
 		</style>
 
-		<div id="mauticform_wrapper_contactform" class="mauticform_wrapper">
+		<div id="mauticform_wrapper_contactform" class="mauticform_wrapper text-[#192734] dark:text-white">
 			<form
 				autocomplete="false"
 				role="form"
