--- a/src/pages/invoicing.astro
+++ b/src/pages/invoicing.astro
@@ -8,15 +8,15 @@ changeLanguage("en");
 
 <Layout lang="en" title="Invoicing">
 	<Container>
-		<div class="py-20 px-10 md:px-0">
-			<h1 class="md:text-[60px] mb-10 text-4xl font-semibold text-[#1F2634]">Invoicing</h1>
-			<p class="md:text-[40px] text-2xl font-semibold text-[#1F2634]">Hungarian Invoicing with ERPNext - Coming Soon in 2023 Q3</p>
+		<div class="py-20 px-10 md:px-0 ">
+			<h1 class="md:text-[60px] mb-10 text-4xl dark:text-white font-semibold text-[#1F2634]">Invoicing</h1>
+			<p class="md:text-[40px] text-2xl font-semibold dark:text-white text-[#1F2634]">Hungarian Invoicing with ERPNext - Coming Soon in 2023 Q3</p>
 			<div>
-				<p class="text-xl py-10 text-[#1F2634]">We will soon make available the issuance of invoices compliant with Hungarian regulations from the ERPNext system.</p>
+				<p class="text-xl py-10 dark:text-white text-[#1F2634]">We will soon make available the issuance of invoices compliant with Hungarian regulations from the ERPNext system.</p>
 				<img src="/IyzD8FB.png" alt="" />
 			</div>
 			<div>
-				<p class="text-xl py-10 text-[#1F2634]">Moreover, ERPNext will not only function as a traditional invoicing tool but also as a cash register.</p>
+				<p class="text-xl py-10 dark:text-white text-[#1F2634]">Moreover, ERPNext will not only function as a traditional invoicing tool but also as a cash register.</p>
 				<img src="/S1Fzpjh.png" alt="" />
 			</div>
 		</div>
