--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,8 +1,5 @@
 ---
-import logo from "assets/logo.svg";
 import { localizePath } from "astro-i18next";
-import LanguageSelector from "@components/languageselector.astro";
-import ThemeSelector from "@components/themeselector.astro";
 import { t } from "i18next";
 
 
@@ -47,7 +44,7 @@ export const menuitems = [
 ];
 ---
 
-<footer class="pb-12 pt-28 dark:bg-stone-950">
+<footer class="pb-12 pt-28 dark:bg-stone-900">
 	<div class="mx-auto max-w-6xl px-6 md:px-12 lg:px-6 xl:px-0">
 		<!-- DECOMMENT HERE IF YOU WANT YOUR LOGO IN THE FOOTER -->
 		<!-- <a href={localizePath("/")} aria-label="logo" class="group flex items-center justify-center space-x-2">
@@ -99,9 +96,9 @@ export const menuitems = [
 				</svg>
 			</a>
 		</div>
+	-->
 		<div class="flex justify-center mt-12 gap-3">
-			<ThemeSelector />
-		</div> -->
+		</div> 
 		<div class="mt-4 text-center flex flex-col">
 			<span class="text-base tracking-wide text-gray-500 dark:text-white">{t(footerDetails)}</span>
 			<span class="text-sm tracking-wide text-gray-400 dark:text-white"></span>
