--- a/src/pages/accounting.astro
+++ b/src/pages/accounting.astro
@@ -2,55 +2,56 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
+import LetsTalk from "@components/LetsTalk.astro";
 changeLanguage("en");
 ---
 
 <Layout lang="en" title="Accounting">
 	<Container>
-		<div class="px-5 py-15">
+		<div class="px-5 py-15 dark:bg-stone-900">
 			<div class="md:flex justify-between items-center gap-10">
 				<div class="flex flex-col h-full justify-center flex-2">
-					<h1 class="text-[40px] md:text-[50px] leading-none font-semibold text-[#192734]">ERPNext Hungarian Accounting</h1>
-					<p class="text-gray-400 text-xl my-5">Solutions to Support Accounting</p>
+					<h1 class="text-[40px] md:text-[50px] leading-none font-semibold text-[#192734] dark:text-white">ERPNext Hungarian Accounting</h1>
+					<p class="text-gray-400 dark:text-white text-xl my-5">Solutions to Support Accounting</p>
 				</div>
 				<div class="flex-1 py-32">
-					<img class="w-full" src="../../../public/erpnextImage.png" alt="" />
+					<img class="w-full" src="/erpnextImage.png" alt="" />
 				</div>
 			</div>
-			<div class="flex flex-col items-center">
+			<div class="flex flex-col items-center text-[#192734] dark:text-white">
 				<section class="py-8 px-4 md:w-[45vw]">
-					<h2 class="font-bold text-3xl mb-10 text-[#192734]">"You can do accounting on a piece of paper."</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5 text-[#192734]">
+					<h2 class="font-bold text-3xl mb-10 ">"You can do accounting on a piece of paper."</h2>
+					<p class="list-disc text-[17px] leading-7 space-y-5">
 						This is a saying from an unknown accountant. But despite that, almost everyone (usually) uses some kind of double-entry accounting or accounting program to handle financial events. However, this humorous remark points out the essential point that there are no specific requirements for accounting programs; one can only infer from various regulations related to accounting principles how accounting should be done.
 					</p>
 				</section>
 				<section class="py-8 px-4 md:w-[45vw]">
-					<h2 class="font-bold text-3xl mb-10 text-[#192734]">So why do accountants use accounting software?</h2>
-					<p class="list-disc text-[17px] leading-7 text-[#192734]">
+					<h2 class="font-bold text-3xl mb-10 ">So why do accountants use accounting software?</h2>
+					<p class="list-disc text-[17px] leading-7 ">
 						Accounting programs automate and simplify many tasks, which is why accountants prefer using their own accounting software. They have to do less manual work, and thanks to automation, they can minimize inaccuracies that may arise during data entry.
 					</p>
-					<p class="list-disc text-[17px] leading-7 py-10 text-[#192734]">
+					<p class="list-disc text-[17px] leading-7 py-10 ">
 						Another important aspect is that accounting programs not only simplify the recording of financial events but also greatly facilitate the preparation of reports for the government authorities. It's no secret that most accounting programs can generate monthly VAT reports in the required format (ÁNYK) with just a few clicks. However, this process may require some adjustments and manual review to ensure that the reports are error-free, regardless of the software used.
 					</p>
-					<p class="list-disc text-[17px] leading-7 text-[#192734]">
+					<p class="list-disc text-[17px] leading-7 ">
 						Besides handling monthly reports, accounting programs can also be helpful in preparing annual financial statements. However, it's worth noting that this functionality might not be well-implemented in all accounting programs. Consequently, there are additional reporting solutions that some accountants use in conjunction with their accounting software.
 					</p>
 				</section>
 				<section class="py-8 px-4 md:w-[45vw]">
-					<h2 class="font-bold text-3xl mb-10 text-[#192734]">Why is this relevant to ERPNext?</h2>
-					<p class="list-disc text-[17px] leading-7 text-[#192734]">
+					<h2 class="font-bold text-3xl mb-10 ">Why is this relevant to ERPNext?</h2>
+					<p class="list-disc text-[17px] leading-7">
 						From the above, it's evident that some accountants choose their own accounting program due to convenience, speed, and accuracy. They might not want or be able to adapt to other systems and may charge additional fees for using external software, even though it would reduce their workload, making it eligible for a discount.
 					</p>
-					<p class="list-disc text-[17px] leading-7 py-10 text-[#192734]">
+					<p class="list-disc text-[17px] leading-7 py-10">
 						However, there is another segment of the profession that doesn't mind which accounting program they use, as they possess a higher level of knowledge and perspective on accounting. They can further automate and configure processes without in-depth knowledge of the software.
 					</p>
 				</section>
 				<section class="py-8 px-4 md:w-[45vw]">
-					<h2 class="font-bold text-3xl mb-10 text-[#192734]">How can ERPNext be used for Hungarian accounting?</h2>
-					<p class="list-disc text-[17px] leading-7 pb-10 text-[#192734]">
+					<h2 class="font-bold text-3xl mb-10">How can ERPNext be used for Hungarian accounting?</h2>
+					<p class="list-disc text-[17px] leading-7 pb-10">
 						Considering the above, there are several ways to use ERPNext for Hungarian accounting. When using ERP systems, the following solutions are common:
 					</p>
-					<ul class="list-decimal ml-10 space-y-5 text-[#192734]">
+					<ul class="list-decimal ml-10 space-y-5">
 						<li>
 							Double-entry accounting, but not in the traditional sense. This can be better described as parallel accounting. In this case, even if financial events are automatically recorded in the ERPNext system, e.g., by an administrator, the official accountant doesn't use the system. Instead, they might use their own system and might retrieve data from ERPNext if needed. However, this approach is counterproductive, especially considering that they might still need a third-party program to generate reports.
 						</li>
@@ -67,26 +68,20 @@ changeLanguage("en");
 				</section>
 
 				<section class="py-8 px-4 md:w-[45vw]">
-					<h2 class="font-bold text-3xl mb-10 text-[#192734]">What are the advantages of using ERPNext for accounting?</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5 text-[#192734]">
+					<h2 class="font-bold text-3xl mb-10">What are the advantages of using ERPNext for accounting?</h2>
+					<p class="list-disc text-[17px] leading-7 space-y-5">
 						Single source of truth – everyone sees the same information from a single interface (with appropriate permissions). Only one interface needs to be learned, and ERPNext is quite intuitive. There is no duplicate work, as most tasks can be automated, such as automatic booking of outgoing invoices. Incoming invoices should primarily be handled by ERPNext to track payment status, possibly simplified with bank synchronization.
 					</p>
 				</section>
 
 				<section class="py-8 px-4 md:w-[45vw]">
-					<h2 class="font-bold text-3xl mb-10 text-[#192734]">Okay, but how are the reports prepared in ERPNext?</h2>
-					<p class="list-disc text-[17px] leading-7 space-y-5 text-[#192734]">
+					<h2 class="font-bold text-3xl mb-10">Okay, but how are the reports prepared in ERPNext?</h2>
+					<p class="list-disc text-[17px] leading-7 space-y-5">
 						The Hungarian ERPNext and Frappe community is continuously working on localizing ERPNext, aiming to achieve the optimal solution mentioned in point 3. Until then, using external Excel-based reporting and financial statement software is the most suitable solution. These software tools receive data from ERPNext and produce the necessary documents for Hungarian accounting.
 					</p>
 				</section>
 			</div>
-			<section class="py-8 items-center px-4 bg-[#EEF0F2] rounded-xl flex justify-between w-full">
-				<div>
-					<h2 class="my-3 text-[30px] text-[#192734] font-bold">Do you have more questions?</h2>
-					<span class="text-[#192734]">ERPNext Accounting in Hungarian</span>
-				</div>
-				<a href="/contact" class="cursor-pointer text-2xl font-semibold text-gray-700">Let's Talk! ></a>
-			</section>
+			<LetsTalk/>
 		</div>
 	</Container>
 </Layout>
