--- a/src/pages/hu/monolithon.astro
+++ b/src/pages/hu/monolithon.astro
@@ -10,57 +10,57 @@ changeLanguage("hu");
 	<Container>
 		<div class="">
 			<div class="flex flex-col h-full justify-center py-36">
-				<h1 class="text-[40px] md:text-[50px] leading-none font-semibold text-[#192734]">Monolithon idővonal</h1>
+				<h1 class="text-[40px] md:text-[50px] leading-none font-semibold text-[#192734] dark:text-white">Monolithon idővonal</h1>
 			</div>
-			<div class=" flex flex-col gap-4">
-				<h1 class="text-[25px] md:text-[35px] pb-16 leading-none font-semibold text-[#192734]">ERPNext felfedezése</h1>
+			<div class=" flex flex-col gap-4 text-[#192734] dark:text-white">
+				<h1 class="text-[25px] md:text-[35px] pb-16 leading-none font-semibold ">ERPNext felfedezése</h1>
 				<div class="flex gap-20  text-lg">
 					<span class="font-medium">2023</span>
-					<p class="text-gray-700">Első saját, komplex ERPNext app publikálása</p>
+					<p >Első saját, komplex ERPNext app publikálása</p>
 				</div>
 				<div class="flex gap-20  text-lg">
 					<span class="font-medium">2022</span>
-					<p class="text-gray-700">Költözés a Frappe Cloud ERPNext felhőbe és frissítés a 14.0 verzióra</p>
+					<p >Költözés a Frappe Cloud ERPNext felhőbe és frissítés a 14.0 verzióra</p>
 				</div>
 				<div class="flex gap-20  text-lg">
 					<span class="font-medium">2021</span>
-					<p class="text-gray-700">Frissítés az ERPNext 13.0 fejlesztői kiadására</p>
+					<p >Frissítés az ERPNext 13.0 fejlesztői kiadására</p>
 				</div>
 				<div class="flex gap-20  text-lg">
 					<span class="font-medium">2020</span>
-					<p class="text-gray-700">Migrálás ERPNextre</p>
+					<p >Migrálás ERPNextre</p>
 				</div>
 				<div class="flex gap-20  text-lg">
 					<span class="font-medium">2019</span>
-					<p class="text-gray-700">ERPNext tesztelés - éles üzemben használható és ajánlható</p>
+					<p >ERPNext tesztelés - éles üzemben használható és ajánlható</p>
 				</div>
 				<div class="flex gap-20  text-lg">
 					<span class="font-medium">2018</span>
-					<p class="text-gray-700">ERPNext tesztelés - ez már majdnem kész</p>
+					<p >ERPNext tesztelés - ez már majdnem kész</p>
 				</div>
 				<div class="flex gap-20  text-lg">
 					<span class="font-medium">2017</span>
-					<p class="text-gray-700">ERPNext tesztelés - várva várt fejlesztések megjelenése</p>
+					<p >ERPNext tesztelés - várva várt fejlesztések megjelenése</p>
 				</div>
 				<div class="flex gap-20  text-lg">
 					<span class="font-medium">2016</span>
-					<p class="text-gray-700">ERPNext tesztelés - szépen fejlődik</p>
+					<p >ERPNext tesztelés - szépen fejlődik</p>
 				</div>
 				<div class="flex gap-20  text-lg">
 					<span class="font-medium">2015</span>
-					<p class="text-gray-700">ERPNext tesztelés - egyre jobb</p>
+					<p >ERPNext tesztelés - egyre jobb</p>
 				</div>
 				<div class="flex gap-20  text-lg">
 					<span class="font-medium">2014</span>
-					<p class="text-gray-700">ERPNext tesztelés - alakul</p>
+					<p >ERPNext tesztelés - alakul</p>
 				</div>
 				<div class="flex gap-20  text-lg">
 					<span class="font-medium">2013</span>
-					<p class="text-gray-700">Az első ERPNext telepítés (3.0)</p>
+					<p >Az első ERPNext telepítés (3.0)</p>
 				</div>
 				<div class="flex gap-20  text-lg">
 					<span class="font-medium">2010</span>
-					<p class="text-gray-700">Az első találkozás az ERPNext 1.0 kiadásával</p>
+					<p >Az első találkozás az ERPNext 1.0 kiadásával</p>
 				</div>
 			</div>
 		</div>
