--- a/src/pages/hu/uzemeltetes.astro
+++ b/src/pages/hu/uzemeltetes.astro
@@ -8,14 +8,16 @@ changeLanguage("hu");
 
 <Layout lang="en" title="Üzemeltetés">
 	<Container>
-		<div class="py-20">
-			<h1 class="md:text-[60px] mb-10 text-4xl font-semibold text-[#1F2634]">Üzemeltetés</h1>
-			<p class="md:text-[40px] text-2xl font-semibold text-[#1F2634]">ERPNext üzemeltetése a felhőben</p>
+		<div class="py-20 text-[#192734] dark:text-white">
 			<div>
-				<img src="/frappecloud-banner.jpg" alt="" />
+				<h1 class="md:text-[60px] mb-10 text-4xl font-semibold">Üzemeltetés</h1>
+				<p class="md:text-[40px] text-2xl font-semibold mb-10">ERPNext üzemeltetése a felhőben</p>
+				<div>
+					<img src="/frappecloud-banner.jpg" alt="" />
+				</div>
 			</div>
-			<div>
-				<p class="text-lg mt-20 text-[#1F2634]">
+			<div class="text-[#192734] dark:text-white">
+				<p class="text-lg mt-20">
 					Az ERPNext üzemeltetése szakértelem mellett speciális technikai feltételeket is megkíván. Több éves ERPNext használat alatt sok
 					partnerrel való együttműködés után megtaláltuk azt az ERPNext partnert, akit szívesen ajánlunk. Az ERPNext osztott tárhelyen nem
 					üzemeltethető, a menedzselt VPS és szerver szolgáltatások pedig jellemzően magasabb árkategóriába tartoznak. Ezért örömmel
