--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,6 +26,20 @@ const makeTitle = title ? title + " | " + "Monolithon" : "Monolithon - ERPNext s
 <!DOCTYPE html>
 <html lang={lang ?? i18next.language}>
 	<head>
+		<!-- Google Tag Manager -->
+		<script>
+			(function (w, d, s, l, i) {
+				w[l] = w[l] || [];
+				w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+				var f = d.getElementsByTagName(s)[0],
+					j = d.createElement(s),
+					dl = l != "dataLayer" ? "&l=" + l : "";
+				j.async = true;
+				j.src = "https://service.monolithon.com/tyynmnmx.js?id=" + i + dl;
+				f.parentNode.insertBefore(j, f);
+			})(window, document, "script", "dataLayer", "GTM-P4LTKG3");
+		</script>
+		<!-- End Google Tag Manager -->
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
@@ -57,7 +71,12 @@ const makeTitle = title ? title + " | " + "Monolithon" : "Monolithon - ERPNext s
 		<!-- <script defer src="/src/pwa.ts"></script> -->
 	</head>
 	<Cookie />
-	<body class="dark:bg-stone-95 ">
+	<body class="dark:bg-stone-95">
+		<!-- Google Tag Manager (noscript) -->
+		<noscript>
+			<iframe src="https://service.monolithon.com/ns.html?id=GTM-P4LTKG3" height="0" width="0" style="display:none;visibility:hidden"></iframe>
+		</noscript>
+		<!-- End Google Tag Manager (noscript) -->
 		<Navbar />
 		<hr />
 		<div>
