Add GTM (off/on)

--- a/src/components/cookie.astro
+++ b/src/components/cookie.astro
@@ -55,6 +55,16 @@
 										value: "analytics",
 										enabled: false,
 										readonly: false,
+										classback:		(function (w, d, s, l, i) {
+				w[l] = w[l] || [];
+				w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+				var f = d.getElementsByTagName(s)[0],
+					j = d.createElement(s),
+					dl = l != "dataLayer" ? "&l=" + l : "";
+				j.async = true;
+				j.src = "https://service.monolithon.com/tyynmnmx.js?id=" + i + dl;
+				f.parentNode.insertBefore(j, f);
+			})(window, document, "script", "dataLayer", "GTM-P4LTKG3");
 									},
 								},
 							],
@@ -81,5 +91,6 @@
 
 			mt("send", "pageview");
 		}
+
 	</script>
 </body>
