--- a/src/components/cookie.astro
+++ b/src/components/cookie.astro
@@ -55,16 +55,9 @@
 										value: "analytics",
 										enabled: false,
 										readonly: false,
-										classback:		(function (w, d, s, l, i) {
-				w[l] = w[l] || [];
-				w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
-				var f = d.getElementsByTagName(s)[0],
-					j = d.createElement(s),
-					dl = l != "dataLayer" ? "&l=" + l : "";
-				j.async = true;
-				j.src = "https://service.monolithon.com/tyynmnmx.js?id=" + i + dl;
-				f.parentNode.insertBefore(j, f);
-			})(window, document, "script", "dataLayer", "GTM-P4LTKG3");
+										classback:function() {
+											GTMAnalytics()
+										}
 									},
 								},
 							],
@@ -90,6 +83,18 @@
 			})(window, document, "script", "http://asset.monolithon.com/mtc.js", "mt");
 
 			mt("send", "pageview");
+		}
+		function GTMAnalytics() {
+			(function (w, d, s, l, i) {
+				w[l] = w[l] || [];
+				w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+				var f = d.getElementsByTagName(s)[0],
+					j = d.createElement(s),
+					dl = l != "dataLayer" ? "&l=" + l : "";
+				j.async = true;
+				j.src = "https://service.monolithon.com/tyynmnmx.js?id=" + i + dl;
+				f.parentNode.insertBefore(j, f);
+			})(window, document, "script", "dataLayer", "GTM-P4LTKG3");
 		}
 
 	</script>
