--- a/src/pages/hu/kapcsolat.astro
+++ b/src/pages/hu/kapcsolat.astro
@@ -3,6 +3,7 @@ import { changeLanguage } from "i18next";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
+import ContactInfoHu from "@components/contactInfoHu.astro";
 
 changeLanguage("hu");
 ---
@@ -131,117 +132,121 @@ changeLanguage("hu");
 			}
 		</style>
 
-		<div id="mauticform_wrapper_contactform" class="mauticform_wrapper text-[#192734] dark:text-white">
-			<form
-				autocomplete="false"
-				role="form"
-				method="post"
-				action="http://asset.monolithon.com/form/submit?formId=1"
-				id="mauticform_contactform"
-				data-mautic-form="contactform"
-				enctype="multipart/form-data">
-				<div class="mauticform-error" id="mauticform_contactform_error"></div>
-				<div class="mauticform-message" id="mauticform_contactform_message"></div>
-				<div class="mauticform-innerform">
-					<div class="mauticform-page-wrapper mauticform-page-1" data-mautic-form-page="1">
-						<div
-							id="mauticform_contactform_first_name"
-							data-validate="first_name"
-							data-validation-type="text"
-							class="mauticform-row mauticform-text mauticform-field-1 mauticform-required">
-							<label
-								id="mauticform_label_contactform_first_name"
-								for="mauticform_input_contactform_first_name"
-								class="mauticform-label">
-								Vezetéknév
-							</label>
-							<input
-								id="mauticform_input_contactform_first_name"
-								name="mauticform[first_name]"
-								value=""
-								class="mauticform-input"
-								type="text"
-							/>
-							<span class="mauticform-errormsg" style="display: none;">Kötelező</span>
-						</div>
-
-						<div
-							id="mauticform_contactform_last_name"
-							data-validate="last_name"
-							data-validation-type="text"
-							class="mauticform-row mauticform-text mauticform-field-2 mauticform-required">
-							<label id="mauticform_label_contactform_last_name" for="mauticform_input_contactform_last_name" class="mauticform-label">
-								Keresztnév
-							</label>
-							<input
-								id="mauticform_input_contactform_last_name"
-								name="mauticform[last_name]"
-								value=""
-								class="mauticform-input"
-								type="text"
-							/>
-							<span class="mauticform-errormsg" style="display: none;">Kötelező</span>
-						</div>
-
-						<div
-							id="mauticform_contactform_email_address"
-							data-validate="email_address"
-							data-validation-type="email"
-							class="mauticform-row mauticform-email mauticform-field-3 mauticform-required">
-							<label
-								id="mauticform_label_contactform_email_address"
-								for="mauticform_input_contactform_email_address"
-								class="mauticform-label">
-								Email cím
-							</label>
-							<input
-								id="mauticform_input_contactform_email_address"
-								name="mauticform[email_address]"
-								value=""
-								class="mauticform-input"
-								type="email"
-							/>
-							<span class="mauticform-errormsg" style="display: none;">Kötelező</span>
-						</div>
-
-						<div
-							id="mauticform_contactform_mobile"
-							data-validate="mobile"
-							data-validation-type="text"
-							class="mauticform-row mauticform-text mauticform-field-4 mauticform-required">
-							<label id="mauticform_label_contactform_mobile" for="mauticform_input_contactform_mobile" class="mauticform-label">
-								Mobil
-							</label>
-							<input id="mauticform_input_contactform_mobile" name="mauticform[mobile]" value="" class="mauticform-input" type="text" />
-							<span class="mauticform-errormsg" style="display: none;">Kötelező</span>
-						</div>
-
-						<div id="mauticform_contactform_f_message" class="mauticform-row mauticform-text mauticform-field-5">
-							<label id="mauticform_label_contactform_f_message" for="mauticform_input_contactform_f_message" class="mauticform-label">
-								Üzenet
-							</label>
-							<textarea id="mauticform_input_contactform_f_message" name="mauticform[f_message]" class="mauticform-textarea"></textarea>
-							<span class="mauticform-errormsg" style="display: none;"></span>
-						</div>
-
-						<div id="mauticform_contactform_submit" class="mauticform-row mauticform-button-wrapper mauticform-field-6">
-							<button
-								type="submit"
-								name="mauticform[submit]"
-								id="mauticform_input_contactform_submit"
-								value=""
-								class="mauticform-button btn btn-default">
-								Küldés
-							</button>
+		<div class="md:flex">
+			<div id="mauticform_wrapper_contactform" class="mauticform_wrapper flex-grow text-[#192734] dark:text-white">
+				<form
+					autocomplete="false"
+					role="form"
+					method="post"
+					action="http://asset.monolithon.com/form/submit?formId=1"
+					id="mauticform_contactform"
+					data-mautic-form="contactform"
+					enctype="multipart/form-data">
+					<div class="mauticform-error" id="mauticform_contactform_error"></div>
+					<div class="mauticform-message" id="mauticform_contactform_message"></div>
+					<div class="mauticform-innerform">
+						<div class="mauticform-page-wrapper mauticform-page-1" data-mautic-form-page="1">
+							<div
+								id="mauticform_contactform_first_name"
+								data-validate="first_name"
+								data-validation-type="text"
+								class="mauticform-row mauticform-text mauticform-field-1 mauticform-required">
+								<label
+									id="mauticform_label_contactform_first_name"
+									for="mauticform_input_contactform_first_name"
+									class="mauticform-label">
+									Vezetéknév
+								</label>
+								<input
+									id="mauticform_input_contactform_first_name"
+									name="mauticform[first_name]"
+									value=""
+									class="mauticform-input"
+									type="text"
+								/>
+								<span class="mauticform-errormsg" style="display: none;">Kötelező</span>
+							</div>
+	
+							<div
+								id="mauticform_contactform_last_name"
+								data-validate="last_name"
+								data-validation-type="text"
+								class="mauticform-row mauticform-text mauticform-field-2 mauticform-required">
+								<label id="mauticform_label_contactform_last_name" for="mauticform_input_contactform_last_name" class="mauticform-label">
+									Keresztnév
+								</label>
+								<input
+									id="mauticform_input_contactform_last_name"
+									name="mauticform[last_name]"
+									value=""
+									class="mauticform-input"
+									type="text"
+								/>
+								<span class="mauticform-errormsg" style="display: none;">Kötelező</span>
+							</div>
+	
+							<div
+								id="mauticform_contactform_email_address"
+								data-validate="email_address"
+								data-validation-type="email"
+								class="mauticform-row mauticform-email mauticform-field-3 mauticform-required">
+								<label
+									id="mauticform_label_contactform_email_address"
+									for="mauticform_input_contactform_email_address"
+									class="mauticform-label">
+									Email cím
+								</label>
+								<input
+									id="mauticform_input_contactform_email_address"
+									name="mauticform[email_address]"
+									value=""
+									class="mauticform-input"
+									type="email"
+								/>
+								<span class="mauticform-errormsg" style="display: none;">Kötelező</span>
+							</div>
+	
+							<div
+								id="mauticform_contactform_mobile"
+								data-validate="mobile"
+								data-validation-type="text"
+								class="mauticform-row mauticform-text mauticform-field-4 mauticform-required">
+								<label id="mauticform_label_contactform_mobile" for="mauticform_input_contactform_mobile" class="mauticform-label">
+									Mobil
+								</label>
+								<input id="mauticform_input_contactform_mobile" name="mauticform[mobile]" value="" class="mauticform-input" type="text" />
+								<span class="mauticform-errormsg" style="display: none;">Kötelező</span>
+							</div>
+	
+							<div id="mauticform_contactform_f_message" class="mauticform-row mauticform-text mauticform-field-5">
+								<label id="mauticform_label_contactform_f_message" for="mauticform_input_contactform_f_message" class="mauticform-label">
+									Üzenet
+								</label>
+								<textarea id="mauticform_input_contactform_f_message" name="mauticform[f_message]" class="mauticform-textarea"></textarea>
+								<span class="mauticform-errormsg" style="display: none;"></span>
+							</div>
+	
+							<div id="mauticform_contactform_submit" class="mauticform-row mauticform-button-wrapper mauticform-field-6">
+								<button
+									type="submit"
+									name="mauticform[submit]"
+									id="mauticform_input_contactform_submit"
+									value=""
+									class="mauticform-button btn btn-default">
+									Küldés
+								</button>
+							</div>
 						</div>
 					</div>
-				</div>
-
-				<input type="hidden" name="mauticform[formId]" id="mauticform_contactform_id" value="1" />
-				<input type="hidden" name="mauticform[return]" id="mauticform_contactform_return" value="" />
-				<input type="hidden" name="mauticform[formName]" id="mauticform_contactform_name" value="contactform" />
-			</form>
+	
+					<input type="hidden" name="mauticform[formId]" id="mauticform_contactform_id" value="1" />
+					<input type="hidden" name="mauticform[return]" id="mauticform_contactform_return" value="" />
+					<input type="hidden" name="mauticform[formName]" id="mauticform_contactform_name" value="contactform" />
+				</form>
+			</div>
+			<ContactInfoHu/>
 		</div>
+
 		<script>
 			if (typeof MauticSDKLoaded == "undefined") {
 				var MauticSDKLoaded = true;
