--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -59,7 +59,7 @@ export const menuitems = [
 		</button>
 	</div>
 	<nav class="flex" id="nav">
-		<div class="flex flex-col flex-grow  gap-4 md:justify-end md:items-center md:flex md:flex-row md:mx-auto">
+		<div class="flex flex-col pr-4 flex-grow  gap-4 md:justify-end md:items-center md:flex md:flex-row md:mx-auto">
 			{
 				menuitems.map((item) =>
 					 (
@@ -90,11 +90,13 @@ export const menuitems = [
 		</div>
 		<div class="mt-4 md:mt-0 flex flex-col md:flex-row gap-8">
 			<Themeselector />
+
 			<Languageselector
 			showFlag={false}
 			languageMapping={{ en: "English", hu: "Magyar " }}
 			class="appearance-none py-1 px-2 rounded bg-slate-100 dark:bg-stone-900"
 		/>
+		
 			<Link 
 			href={localizePath(t('path_header.primary_button_text'))}
 			class="md:px-3 md:py-2 leading-6">
