--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -59,7 +59,7 @@ export const menuitems = [
 		</button>
 	</div>
 	<nav class="flex" id="nav">
-		<div class="flex flex-col pr-4 flex-grow  gap-4 md:justify-end md:items-center md:flex md:flex-row md:mx-auto">
+		<div class="flex flex-col  pr-4 flex-grow  gap-4 md:justify-end md:items-center md:flex md:flex-row md:mx-auto">
 			{
 				menuitems.map((item) =>
 					 (
@@ -79,10 +79,11 @@ export const menuitems = [
 								checkPath();
 								window.addEventListener('popstate', checkPath);
 							}`}
-							:class="{ 'text-[#2490EF] dark:bg-[#2490EF]': isActive }"
 							data-path={item.path}
 						>
-							{t(item.title)}
+							<span class="dark:text-white text-[#2490EF]">
+								{t(item.title)}
+							</span>
 						</Link>
 					)
 				)
