fix links colors

--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -81,7 +81,7 @@ export const menuitems = [
 							}`}
 							data-path={item.path}
 						>
-							<span class="dark:text-white text-[#2490EF]">
+							<span class="dark:text-white text-[#4c5a67] hover:text-[#2490EF]">
 								{t(item.title)}
 							</span>
 						</Link>
