--- a/src/pages/hu/kapcsolat.astro
+++ b/src/pages/hu/kapcsolat.astro
@@ -137,8 +137,12 @@ changeLanguage("hu");
 				<div class="mx-auto max-w-2xl space-y-16 divide-y divide-gray-100 lg:mx-0 lg:max-w-none">
 					<div class="md:flex">
 						<div>
-							<h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Osztályok</h2>
-							<p class="mt-4 leading-7 text-gray-600 dark:text-gray-200">Vegye fel a kapcsolatot elkötelezett csapatainkkal.</p>
+							<h2 class="text-3xl font-bold tracking-tight text-gray-900 dark:text-white">Gede Tibor</h2>
+							<p class="mt-4 leading-7 text-gray-600 dark:text-gray-200">Kapcsolattartó</br>
+							Budapest</br>
+							Magyarország</br>
+							+36 30 7192 418</br>
+							</p>
 						</div>
 						<div id="mauticform_wrapper_contactform" class=" flex-grow mauticform_wrapper text-[#192734] dark:text-white">
 							<form
