--- a/src/pages/hu/kapcsolat.astro
+++ b/src/pages/hu/kapcsolat.astro
@@ -149,7 +149,7 @@ changeLanguage("hu");
 								autocomplete="false"
 								role="form"
 								method="post"
-								action="http://asset.monolithon.com/form/submit?formId=1"
+								action="https://asset.monolithon.com/form/submit?formId=1"
 								id="mauticform_contactform"
 								data-mautic-form="contactform"
 								enctype="multipart/form-data">
@@ -285,12 +285,12 @@ changeLanguage("hu");
 				var head = document.getElementsByTagName("head")[0];
 				var script = document.createElement("script");
 				script.type = "text/javascript";
-				script.src = "http://asset.monolithon.com/media/js/mautic-form.js?vea43f1e4";
+				script.src = "https://asset.monolithon.com/media/js/mautic-form.js?vea43f1e4";
 				script.onload = function () {
 					MauticSDK.onLoad();
 				};
 				head.appendChild(script);
-				var MauticDomain = "http://asset.monolithon.com";
+				var MauticDomain = "https://asset.monolithon.com";
 				var MauticLang = {
 					submittingMessage: "Kérjük várjon...",
 				};
