--- a/src/components/cookie.astro
+++ b/src/components/cookie.astro
@@ -80,7 +80,7 @@
 				a.async = 1;
 				a.src = u;
 				m.parentNode.insertBefore(a, m);
-			})(window, document, "script", "http://asset.monolithon.com/mtc.js", "mt");
+			})(window, document, "script", "https://asset.monolithon.com/mtc.js", "mt");
 
 			mt("send", "pageview");
 		}
