feat: added mautic config

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -63,6 +63,24 @@ const makeTitle = title ? title + " | " + "Monolithon" : "Monolithon - ERPNext s
 			<iframe src="https://service.monolithon.com/ns.html?id=GTM-P4LTKG3" height="0" width="0" style="display:none;visibility:hidden"></iframe>
 		</noscript>
 		<!-- End Google Tag Manager (noscript) -->
+		<script>
+			(function (w, d, t, u, n, a, m) {
+				w["MauticTrackingObject"] = n;
+				(w[n] =
+					w[n] ||
+					function () {
+						(w[n].q = w[n].q || []).push(arguments);
+					}),
+					(a = d.createElement(t)),
+					(m = d.getElementsByTagName(t)[0]);
+				a.async = 1;
+				a.src = u;
+				m.parentNode.insertBefore(a, m);
+			})(window, document, "script", "https://asset.monolithon.com/mtc.js", "mt");
+
+			mt("send", "pageview");
+		</script>
+
 		<Navbar />
 		<hr />
 		<div>
@@ -77,7 +95,6 @@ const makeTitle = title ? title + " | " + "Monolithon" : "Monolithon - ERPNext s
 			}
 		</style>
 		<script type="text/javascript">
-		
 			/** This section is only needed once per page if manually copying **/
 			if (typeof MauticSDKLoaded == "undefined") {
 				var MauticSDKLoaded = true;
