--- a/src/components/navbar/navbar.astro
+++ b/src/components/navbar/navbar.astro
@@ -105,7 +105,7 @@ export const menuitems = [
 								<div class="px-2 py-2 rounded-md shadow dark:bg-gray-800">
 									{ item.children.map((subitem) =>
 										<Link
-											href={localizePath(subitem.path)}
+											href={localizePath(t(subitem.path))}
 											style="hover"
 											size="sm"
 											class="block"
@@ -123,7 +123,7 @@ export const menuitems = [
 											}`}
 											:class="{ 'bg-gray-200 dark:bg-gray-600': isActive }"
 										>
-											{subitem.title}
+											{t(subitem.title)}
 										</Link>
 									)}
 								</div>
@@ -131,7 +131,7 @@ export const menuitems = [
 						</div>
 					) : (
 						<Link
-							href={localizePath(item.path)}
+							href={localizePath(t(item.path))}
 							style="hover"
 							size="sm"
 							x-data="{ isActive: false }"
